# fastapi-microservices

./: pyproject.toml
inventory/: consumer.py  main.py
payment/: consumer.py  main.py
